--- a/elide-core/pom.xml
+++ b/elide-core/pom.xml
@@ -100,6 +100,11 @@
             <artifactId>rsql-parser</artifactId>
             <version>2.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.reactivex.rxjava2</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>2.2.0</version>
+        </dependency>
 
         <!-- JSR 303 Validation -->
         <dependency>
